# Disaster-multiagent-architecture-project

./: .gitignore  README.md
robotic-ai-agents/simulator/microsim/: .dockerignore  .gitignore  ARQUITECTURA_FINAL.md  ARQUITECTURA_LANGGRAPH.md  CAMBIOS_REALIZADOS.md  COMPILAR.bat  CONFIGURAR_API_KEY.md  CORRECCION_ENV_COMPLETA.md  CREAR_ENV.bat  Dockerfile  GUIA_PRUEBA.md  INICIAR.bat  INICIAR_CONTROLADOR.bat  INICIAR_LANGGRAPH.bat  INICIAR_SISTEMA_COMPLETO.bat  INICIAR_UGV.bat  INICIAR_VISUALIZACION.bat  INSTALAR_DEPENDENCIAS.bat  INSTRUCCIONES_INSTALACION.md  LEEME_PRIMERO.md  LISTO_PARA_PROBAR.md  PASOS_SIGUIENTES.md  PROJECT_PLAN.md  PRUEBA_SISTEMA_COMPLETO.md  PRÓXIMOS_PASOS.md  README.md  README_FINAL.md  README_INTEGRATION.md  RESUMEN_CORRECCION.md  RESUMEN_FINAL.md  RUTAS_CORREGIDAS.md  SISTEMA_COMPLETO.md  VERIFICAR_CONFIGURACION.bat  docker-compose.yml  package.xml  pytest.ini  requirements.txt  run_integration_tests.sh  run_tests.sh  setup.cfg  (+3 more)
robotic-ai-agents/simulator/microsim/docker-scripts/: build.sh  integration_test.sh  run_node.sh  test.sh
robotic-ai-agents/simulator/microsim/docs/: AI_CONTROLLER_GUIDE.md  DOCKER.md  QUICKSTART.md  TEST_SUITE.md  USAGE.md  WINDOWS_SETUP.md  WORLD_CONFIGURATION.md
robotic-ai-agents/simulator/microsim/launch/: test_integration.launch.py
robotic-ai-agents/simulator/microsim/microsim/: __init__.py  camera.py  microsim_node.py  physics.py  radio.py  scenario_loader.py  sensors.py  tf_broadcaster.py  timekeeper.py  utils.py  world.py
robotic-ai-agents/simulator/microsim/multiagent/: geometric_detection.py  (+3 more)
(+52 files in other folders)
